// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/AbstractCommand should match snapshot 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/test/integrations/commands"
    >
      <FormattedMessage
        defaultMessage="Slash Commands"
        id="installed_command.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Header"
      id="Header"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form"
  >
    <form
      className="form-horizontal"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="displayName"
        >
          <FormattedMessage
            defaultMessage="Display Name"
            id="add_command.displayName"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="displayName"
            maxLength="64"
            onChange={[Function]}
            type="text"
            value="display_name"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Display name for your slash command made of up to 64 characters."
              id="add_command.displayName.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="description"
        >
          <FormattedMessage
            defaultMessage="Description"
            id="add_command.description"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="description"
            maxLength="128"
            onChange={[Function]}
            type="text"
            value="description"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Description for your incoming webhook."
              id="add_command.description.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="trigger"
        >
          <FormattedMessage
            defaultMessage="Command Trigger Word"
            id="add_command.trigger"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="trigger"
            maxLength={128}
            onChange={[Function]}
            placeholder="Command trigger e.g. \\"hello\\" not including the slash"
            type="text"
            value="trigger"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Trigger word must be unique, and cannot begin with a slash or contain any spaces."
              id="add_command.trigger.help"
              values={Object {}}
            />
          </div>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Examples: client, employee, patient, weather"
              id="add_command.trigger.helpExamples"
              values={Object {}}
            />
          </div>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Reserved: {link}"
              id="add_command.trigger.helpReserved"
              values={
                Object {
                  "link": <a
                    href="https://docs.mattermost.com/help/messaging/executing-commands.html#built-in-commands"
                    rel="noopener noreferrer"
                    target="_blank"
                >
                    <FormattedMessage
                        defaultMessage="see list of built-in slash commands"
                        id="add_command.trigger.helpReservedLinkText"
                        values={Object {}}
                    />
                </a>,
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="url"
        >
          <FormattedMessage
            defaultMessage="Request URL"
            id="add_command.url"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="url"
            maxLength="1024"
            onChange={[Function]}
            placeholder="Must start with http:// or https://"
            type="text"
            value="https://google.com/command"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="The callback URL to receive the HTTP POST or GET event request when the slash command is run."
              id="add_command.url.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="method"
        >
          <FormattedMessage
            defaultMessage="Request Method"
            id="add_command.method"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <select
            className="form-control"
            id="method"
            onChange={[Function]}
            value="G"
          >
            <option
              value="P"
            >
              POST
            </option>
            <option
              value="G"
            >
              GET
            </option>
          </select>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="The type of command request issued to the Request URL."
              id="add_command.method.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="username"
        >
          <FormattedMessage
            defaultMessage="Response Username"
            id="add_command.username"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="username"
            maxLength="64"
            onChange={[Function]}
            placeholder="Username"
            type="text"
            value="username"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Choose a username override for responses for this slash command. Usernames can consist of up to 22 characters consisting of lowercase letters, numbers and they symbols \\"-\\", \\"_\\", and \\".\\" ."
              id="add_command.username.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="iconUrl"
        >
          <FormattedMessage
            defaultMessage="Response Icon"
            id="add_command.iconUrl"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="iconUrl"
            maxLength="1024"
            onChange={[Function]}
            placeholder="https://www.example.com/myicon.png"
            type="text"
            value="https://google.com/icon"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Choose a profile picture override for the post responses to this slash command. Enter the URL of a .png or .jpg file at least 128 pixels by 128 pixels."
              id="add_command.iconUrl.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocomplete"
        >
          <FormattedMessage
            defaultMessage="Autocomplete"
            id="add_command.autocomplete"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8 checkbox"
        >
          <input
            checked={true}
            id="autocomplete"
            onChange={[Function]}
            type="checkbox"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Show slash command in autocomplete list."
              id="add_command.autocomplete.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocompleteHint"
        >
          <FormattedMessage
            defaultMessage="Autocomplete Hint"
            id="add_command.autocompleteHint"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="autocompleteHint"
            maxLength="1024"
            onChange={[Function]}
            placeholder="Example: [Patient Name]"
            type="text"
            value="auto_complete_hint"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Arguments associated with your slash command, displayed as help in the autocomplete list."
              id="add_command.autocompleteHint.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocompleteDescription"
        >
          <FormattedMessage
            defaultMessage="Autocomplete Description"
            id="add_command.autocompleteDescription"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="description"
            maxLength="128"
            onChange={[Function]}
            placeholder="Example: \\"Returns search results for patient records\\""
            type="text"
            value="auto_complete_desc"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Short description of slash command for the autocomplete list."
              id="add_command.autocompleteDescription.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="backstage-form__footer"
      >
        <FormError
          error={null}
          errors={
            Array [
              "serverError",
              null,
            ]
          }
          type="backstage"
        />
        <Link
          className="btn btn-sm"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/test/integrations/commands"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="add_command.cancel"
            values={Object {}}
          />
        </Link>
        <SpinnerButton
          className="btn btn-primary"
          onClick={[Function]}
          spinning={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Footer"
            id="Footer"
            values={Object {}}
          />
        </SpinnerButton>
        renderExtra
      </div>
    </form>
  </div>
</div>
`;

exports[`components/integrations/AbstractCommand should match snapshot, displays client error 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/test/integrations/commands"
    >
      <FormattedMessage
        defaultMessage="Slash Commands"
        id="installed_command.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Header"
      id="Header"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form"
  >
    <form
      className="form-horizontal"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="displayName"
        >
          <FormattedMessage
            defaultMessage="Display Name"
            id="add_command.displayName"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="displayName"
            maxLength="64"
            onChange={[Function]}
            type="text"
            value="display_name"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Display name for your slash command made of up to 64 characters."
              id="add_command.displayName.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="description"
        >
          <FormattedMessage
            defaultMessage="Description"
            id="add_command.description"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="description"
            maxLength="128"
            onChange={[Function]}
            type="text"
            value="description"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Description for your incoming webhook."
              id="add_command.description.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="trigger"
        >
          <FormattedMessage
            defaultMessage="Command Trigger Word"
            id="add_command.trigger"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="trigger"
            maxLength={128}
            onChange={[Function]}
            placeholder="Command trigger e.g. \\"hello\\" not including the slash"
            type="text"
            value=""
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Trigger word must be unique, and cannot begin with a slash or contain any spaces."
              id="add_command.trigger.help"
              values={Object {}}
            />
          </div>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Examples: client, employee, patient, weather"
              id="add_command.trigger.helpExamples"
              values={Object {}}
            />
          </div>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="Reserved: {link}"
              id="add_command.trigger.helpReserved"
              values={
                Object {
                  "link": <a
                    href="https://docs.mattermost.com/help/messaging/executing-commands.html#built-in-commands"
                    rel="noopener noreferrer"
                    target="_blank"
                >
                    <FormattedMessage
                        defaultMessage="see list of built-in slash commands"
                        id="add_command.trigger.helpReservedLinkText"
                        values={Object {}}
                    />
                </a>,
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="url"
        >
          <FormattedMessage
            defaultMessage="Request URL"
            id="add_command.url"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="url"
            maxLength="1024"
            onChange={[Function]}
            placeholder="Must start with http:// or https://"
            type="text"
            value="https://google.com/command"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="The callback URL to receive the HTTP POST or GET event request when the slash command is run."
              id="add_command.url.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="method"
        >
          <FormattedMessage
            defaultMessage="Request Method"
            id="add_command.method"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <select
            className="form-control"
            id="method"
            onChange={[Function]}
            value="G"
          >
            <option
              value="P"
            >
              POST
            </option>
            <option
              value="G"
            >
              GET
            </option>
          </select>
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="The type of command request issued to the Request URL."
              id="add_command.method.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="username"
        >
          <FormattedMessage
            defaultMessage="Response Username"
            id="add_command.username"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="username"
            maxLength="64"
            onChange={[Function]}
            placeholder="Username"
            type="text"
            value="username"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Choose a username override for responses for this slash command. Usernames can consist of up to 22 characters consisting of lowercase letters, numbers and they symbols \\"-\\", \\"_\\", and \\".\\" ."
              id="add_command.username.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="iconUrl"
        >
          <FormattedMessage
            defaultMessage="Response Icon"
            id="add_command.iconUrl"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="iconUrl"
            maxLength="1024"
            onChange={[Function]}
            placeholder="https://www.example.com/myicon.png"
            type="text"
            value="https://google.com/icon"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Choose a profile picture override for the post responses to this slash command. Enter the URL of a .png or .jpg file at least 128 pixels by 128 pixels."
              id="add_command.iconUrl.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocomplete"
        >
          <FormattedMessage
            defaultMessage="Autocomplete"
            id="add_command.autocomplete"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8 checkbox"
        >
          <input
            checked={true}
            id="autocomplete"
            onChange={[Function]}
            type="checkbox"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Show slash command in autocomplete list."
              id="add_command.autocomplete.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocompleteHint"
        >
          <FormattedMessage
            defaultMessage="Autocomplete Hint"
            id="add_command.autocompleteHint"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="autocompleteHint"
            maxLength="1024"
            onChange={[Function]}
            placeholder="Example: [Patient Name]"
            type="text"
            value="auto_complete_hint"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Arguments associated with your slash command, displayed as help in the autocomplete list."
              id="add_command.autocompleteHint.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label col-sm-4"
          htmlFor="autocompleteDescription"
        >
          <FormattedMessage
            defaultMessage="Autocomplete Description"
            id="add_command.autocompleteDescription"
            values={Object {}}
          />
        </label>
        <div
          className="col-md-5 col-sm-8"
        >
          <input
            className="form-control"
            id="description"
            maxLength="128"
            onChange={[Function]}
            placeholder="Example: \\"Returns search results for patient records\\""
            type="text"
            value="auto_complete_desc"
          />
          <div
            className="form__help"
          >
            <FormattedMessage
              defaultMessage="(Optional) Short description of slash command for the autocomplete list."
              id="add_command.autocompleteDescription.help"
              values={Object {}}
            />
          </div>
        </div>
      </div>
      <div
        className="backstage-form__footer"
      >
        <FormError
          error={null}
          errors={
            Array [
              "",
              <FormattedMessage
                defaultMessage="A trigger word is required"
                id="add_command.triggerRequired"
                values={Object {}}
            />,
            ]
          }
          type="backstage"
        />
        <Link
          className="btn btn-sm"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/test/integrations/commands"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="add_command.cancel"
            values={Object {}}
          />
        </Link>
        <SpinnerButton
          className="btn btn-primary"
          onClick={[Function]}
          spinning={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Footer"
            id="Footer"
            values={Object {}}
          />
        </SpinnerButton>
        renderExtra
      </div>
    </form>
  </div>
</div>
`;
